<resources>


    <string name="app_name">OnlineShopping</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_text_login">Đăng nhập</string>
    <string name="text_all_register">Đăng ký</string>
    <string name="text_intro">Online Shopping is develop by Tran Van Hieu</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="numberCountry">+84 |</string>
    <string name="verification_email">Email xác thực</string>
    <string name="verification">Xác thực</string>
    <string name="all_text_forgot_password">Quên Mật khẩu</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="email">Email</string>
    <string name="all_text_password">Mật khẩu</string>
    <string name="all_text_confirm_password">Xác nhận mật khẩu</string>
    <string name="home">Trang chủ</string>
    <string name="live">live</string>
    <string name="message">Tin nhắn</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="mycoin">Xu của tôi</string>
    <string name="reciver_coin">Nhận xu</string>
    <string name="coin_register">Đăng kí tài khoản</string>
    <string name="discount_delivery">Giảm giá vận chuyển</string>
    <string name="deal0D">Săn deal 0D</string>
    <string name="tv_banner_account">Đăng nhập đột phá mọi trải nghiệm!</string>
    <string name="my_orther">Đơn hàng của tôi</string>
    <string name="all_orther"><![CDATA[Xem tất cả đơn hàng >]]></string>
    <string name="wait_pay">Chờ thanh toán</string>
    <string name="wait_delivery">Chờ vận chuyển</string>
    <string name="waiting_delivery">Chờ giao hàng</string>
    <string name="comment_rate">Đánh giá</string>
    <string name="orther_comeback">Đơn hàng đổi trả</string>
    <string name="orther_cancel">Đơn hàng đổi trả</string>
    <string name="e_m_discount">"Tận hưởng Ví eM! "</string>
    <string name="my_comment_rate">Đánh giá của tôi</string>
    <string name="payment_options">Tùy chọn thanh toán</string>
    <string name="help">Trợ giúp</string>
    <string name="chat_with_cleo">Chat với CLEO</string>
    <string name="sales_with_online_shoping">Bán hàng với Shop </string>
    <string name="voucher_purchased">evoucher đã mua</string>
    <string name="scratch_card">Thẻ cào điện thoại</string>
    <string name="my_service">Dịch vụ của tôi</string>
    <string name="login_register">Đăng nhập/ Đăng ký </string>
    <string name="scanner">Quét</string>
    <string name="err_login">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="first_name">Họ tên</string>
    <string name="err_email">Email nhập không hợp lẹ</string>
    <string name="err_null">Không được để trống mục này</string>
    <string name="err_not_phone">Vui lòng nhập chính xác số điện thoại</string>
    <string name="err_not_password">Password không hợp lẹ</string>
    <string name="err_confirmpass">Vui lòng xác nhận lại pass word</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="tv_more">Xem thêm</string>
    <string name="item">item</string>
    <string name="appliance">Đồ gia dụng</string>
    <string name="technology">Công nghệ</string>
    <string name="orther_item">Sản phẩm khác</string>
    <string name="avata_of_owner">avata</string>
    <string name="image_for_review">image review</string>
    <string name="like">like</string>
    <string name="comment">comment</string>
    <string name="share">share</string>
    <string name="input_commnet">nhập nội dung</string>
    <string name="show_more">xem thêm</string>
    <string name="show_less">ẩn bớt</string>
    <string name="detail_infor">Thông tin chi tiết</string>
    <string name="add_shopping_cart">Thêm vào giỏ hàng</string>
    <string name="come_back">Quay lại</string>
    <string name="sumPrice">Tổng giá trị mặt giỏ hàng</string>
    <string name="ship_cost">Phí Shipp</string>
    <string name="sum_cost">"Tổng tiền thanh toán: "</string>
    <string name="pay">Thanh Toán</string>
    <string name="back_home">Ve Trang Chu</string>


    // notification

    <string name="egg_prompt">How do you like your egg?</string>
    <string name="timer_on">Start</string>
    <string name="timer_off">Stop</string>
    <string name="notification_title">Egg Timer</string>
    <string name="notification_text">Your egg is ready!!</string>

    <string name="fcm_message">FCM Message</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="egg_notification_channel_id" translatable="false">egg_channel</string>
    <string name="egg_notification_channel_name" translatable="true">Egg</string>
    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
    <string name="eggs_ready">It is time! Bon appetit!</string>
    <string name="timer_running">Egg timer is running...</string>
    <string name="breakfast_notification_channel_description">Breakfast reminder</string>
    <string name="snooze">Snooze</string>
    <string name="channel_name">notification</string>
    <string name="channel_description">channel_description</string>
</resources>
