<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_title_my_orther"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/my_orther"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_marginStart="@dimen/default_margin_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/all_orther"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/default_margin_normal"
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_marginStart="@dimen/default_margin_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/lo_tool_infor"
        app:layout_constraintTop_toBottomOf="@id/tv_title_my_orther"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_margin_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="@dimen/default_margin_normal"
            android:layout_marginEnd="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_created_card"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/wait_pay" />
            <TextView
                android:text="@string/wait_pay"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:src="@drawable/ic_time_delivery"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:text="@string/wait_delivery"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_cart_delivery"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:text="@string/waiting_delivery"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_comment_rate"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:text="@string/comment_rate"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/order_comback"
        app:layout_constraintTop_toBottomOf="@id/lo_tool_infor"
        app:layout_constraintStart_toStartOf="@id/lo_tool_infor"
        android:src="@drawable/ic_orther_comeback"
        android:layout_marginStart="@dimen/default_margin_large"
        android:layout_width="25dp"
        android:layout_height="25dp"/>

    <TextView
        app:layout_constraintTop_toTopOf="@id/order_comback"
        app:layout_constraintBottom_toBottomOf="@id/order_comback"
        app:layout_constraintStart_toEndOf="@id/order_comback"
        android:layout_marginTop="@dimen/default_margin_small"
        android:text="@string/orther_comeback"
        android:layout_marginStart="@dimen/default_margin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:text="@string/orther_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/default_margin_large"
        android:layout_marginTop="@dimen/default_margin_small"
        app:layout_constraintTop_toTopOf="@id/imv_orther_cancel"
        app:layout_constraintBottom_toBottomOf="@id/imv_orther_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imv_orther_cancel"
        app:layout_constraintTop_toBottomOf="@id/lo_tool_infor"
        app:layout_constraintEnd_toStartOf="@id/tv_cancel"
        android:src="@drawable/ic_cancel_orther"
        android:layout_marginEnd="@dimen/default_margin_small"
        android:layout_width="25dp"
        android:layout_height="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>