<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:text="@string/my_service"
        android:layout_marginStart="@dimen/default_margin_normal"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_mailbox"
                android:layout_gravity="center"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/message"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_mess"
                android:layout_gravity="center"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/my_comment_rate"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_pay_option"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:layout_gravity="center"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/payment_options"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_help"
                android:layout_gravity="center"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/help"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_support"
                android:layout_gravity="center"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/chat_with_cleo"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_sell"
                android:layout_gravity="center"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/sales_with_online_shoping"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_voucher"
                android:layout_gravity="center"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/voucher_purchased"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_margin="@dimen/default_margin_normal"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_phone"
                android:layout_gravity="center"
                android:layout_width="@dimen/default_icon_small"
                android:layout_height="@dimen/default_icon_small"
                android:contentDescription="@string/message" />
            <TextView
                android:text="@string/scratch_card"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>