<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.onlineshopping.ui.fragment.forgotpassword.ForgotPasswordViewModel" />
        <variable
            name="forgotPasswordListenner"
            type="com.example.onlineshopping.ui.fragment.forgotpassword.ForgotPasswordListenner" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.forgotpassword.ForgotPassWordFragment">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/all_text_forgot_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/gl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"
            android:layout_height="0dp" />

        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toTopOf="@id/gl1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/default_margin_large"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="@dimen/default_margin_large"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_margin="@dimen/default_margin_normal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_sdt"
                    android:text="@string/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lo_email_verification"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_verification"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:text="@{viewModel.email}"
                        android:hint="@string/verification_email"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_verification"
                    android:layout_width="match_parent"
                    android:text="@string/verification"
                    android:textAllCaps="false"
                    android:onClick="@{forgotPasswordListenner::btnSend}"
                    android:background="@drawable/custom_backgroud_btn_verification"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>